// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Drug should be serializable to JSON 1`] = `
Object {
  "benefit": 5,
  "expiresIn": 30,
  "name": "test",
}
`;

exports[`Drug should be serializable to string 1`] = `"{\\"name\\":\\"test\\",\\"expiresIn\\":30,\\"benefit\\":5}"`;

exports[`Drug should decrease benefit twice as much if expired 1`] = `
Object {
  "benefit": 3,
  "expiresIn": -1,
  "name": "test",
}
`;

exports[`Drug should decrease expiresIn and benefit over time 1`] = `
Object {
  "benefit": 4,
  "expiresIn": 29,
  "name": "test",
}
`;

exports[`Drug should not allow for a benefit greater than 50 1`] = `
Object {
  "benefit": 50,
  "expiresIn": 30,
  "name": "test",
}
`;

exports[`Drug should not allow for a negative benefit 1`] = `
Object {
  "benefit": 0,
  "expiresIn": 30,
  "name": "test",
}
`;
